[package]
name = "bevy_tmx"
version = "0.1.0"
authors = ["Bram Buurlage"]
edition = "2018"
readme = "readme.md"
description = "Scene loader for .tmx files created by the Tiled map editor"
license = "MIT"
repository = "https://github.com/Kurble/bevy_tmx"
documentation = "https://docs.rs/bevy_tmx"
keywords = ["bevy", "tiled", "tmx", "scene", "asset"]
categories = ["game-development"]

[dependencies]
bevy_app = { version = "0.5", optional = true }
bevy_asset = { version = "0.5", optional = true }
bevy_ecs = { version = "0.5", optional = true }
bevy_reflect = { version = "0.5", optional = true }
bevy_render = { version = "0.5", optional = true }
bevy_sprite = { version = "0.5", optional = true }
bevy_transform = { version = "0.5", optional = true }
bevy_scene = { version = "0.5", optional = true }
bevy_utils = "0.5"
bevy_math = "0.5"
anyhow = "1"
xml-rs = "0.8"
libflate = "1"
base64 = "0.13"
image = "0.23"
async-mutex = "1"

[dev-dependencies]
bevy = "0.5"

[features]
default = ["plugin"]
plugin = ["bevy_app", "bevy_asset", "bevy_ecs", "bevy_reflect", "bevy_render", "bevy_sprite", "bevy_transform", "bevy_scene"]